@@ -1,3 +1,7 @@
+2005-05-19  Mark McLoughlin  <markmc@redhat.com>
+
+	* sabayon.spec.in: sync changes back from Fedora Extras.
+
 2005-05-18  Mark McLoughlin  <markmc@redhat.com>
 
 	* configure.ac: post-release bump to 0.19.
